[project]
name = "devops-demo-api"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "httpx==0.28.1",
    "pytest-asyncio==0.25.3",
]



[tool.uv]
dev-dependencies = []